--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,18 @@
 absl-py==2.1.0
-aext-assistant
-aext-assistant-server
-aext-core
-aext-core-server
-aext-panels
-aext-panels-server
-aext-share-notebook
-aext-share-notebook-server
-aext-shared
-aiobotocore
-aiohttp
-aioitertools
-aiosignal
-alabaster
-altair
-anaconda-anon-usage
-anaconda-catalogs
-anaconda-client
-anaconda-cloud-auth
-anaconda-navigator
-anaconda-project
-annotated-types
 antlr4-python3-runtime==4.9.3
 anyio
 appdirs==1.4.4
-archspec
-argon2-cffi
-argon2-cffi-bindings
-arrow
-astroid
-astropy
-astropy-iers-data
-asttokens
-astunparse==1.6.3
 async-lru
 atomicwrites==1.4.0
 attrs
-Automat
-autopep8
 Babel
 bcrypt
 beautifulsoup4
-binaryornot
 black
 bleach
 blinker
 bokeh
 boltons
-botocore
 Bottleneck
 Brotli
 cachetools
@@ -59,42 +24,21 @@ charset-normalizer
 click
 cloudpickle
 colorama
-colorcet
-comm
-conda
-conda-build
-conda-content-trust
-conda-libmamba-solver
-conda-pack
-conda-package-handling
-conda-repo-cli
-conda-token
-conda_index
-conda_package_streaming
-constantly
-contourpy
-cookiecutter
-cryptography
-cssselect
 cycler
 Cython==3.0.11
 cytoolz
 dask
-dask-expr
 datashader
 debugpy
 decorator
 defusedxml
-diff-match-patch
 dill
 distributed
 distro
-docstring-to-markdown
 docutils
 entrypoints
 et-xmlfile
 executing
-fastjsonschema
 filelock==3.16.1
 filetype==1.2.0
 flake8
@@ -119,7 +63,6 @@ httpcore
 httpx
 hvplot
 hydra-core==1.3.2
-hyperlink
 idna
 imagecodecs
 imageio
@@ -129,17 +72,13 @@ importlib-metadata
 incremental
 inflection
 iniconfig
-intake
-intervaltree
 ipykernel
 ipython
 ipython-genutils
 ipywidgets
 isort
 itemadapter
-itemloaders
 itsdangerous
-jaraco.classes
 jedi
 jellyfish
 Jinja2==3.1.4
@@ -149,43 +88,25 @@ json5
 jsonpatch
 jsonpointer==2.1
 jsonschema
-jsonschema-specifications
-jupyter
-jupyter-console
-jupyter-events
-jupyter-lsp
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_terminals
-jupyterlab
-jupyterlab-pygments
+jupyter-client
+jupyter-core
 jupyterlab-widgets
-jupyterlab_server
 keras==3.5.0
 keyring
 kiwisolver
 lazy-object-proxy
-lazy_loader
-lckr_jupyterlab_variableinspector
 libarchive-c
 libclang==18.1.1
-libmambapy
-linkify-it-py
 llvmlite
 lmdb
 locket
 lxml
 lz4
 Markdown
-markdown-it-py
 MarkupSafe==2.1.5
 matplotlib
 matplotlib-inline
 mccabe
-mdit-py-plugins
-mdurl
-menuinst
 mistune
 mkl-fft
 mkl-random
@@ -195,11 +116,8 @@ more-itertools
 mpmath==1.3.0
 msgpack
 multidict
-multipledispatch
 mypy
 mypy-extensions
-namex==0.0.8
-navigator-updater
 nbclient
 nbconvert
 nbformat
@@ -207,33 +125,23 @@ nest-asyncio
 networkx==3.3
 nltk
 notebook
-notebook_shim
 numba
 numexpr
 numpy
 numpydoc
-omegaconf==2.3.0
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 openpyxl
 opt-einsum==3.3.0
-optree==0.12.1
-overrides
-packaging
 pandas
 pandocfilters
-panel
 param
-paramiko
 parsel
 parso
-partd
 pathspec
-patsy
 pexpect
 pickleshare
 pillow
-pkce
 pkginfo
 platformdirs
 plotly
@@ -242,134 +150,73 @@ ply
 pmdarima==2.0.4
 prometheus-client
 prompt-toolkit
-Protego
 protobuf==3.20.3
 psutil
 ptyprocess
-pure-eval
-py-cpuinfo
-pyarrow
 pyasn1
 pyasn1-modules==0.2.8
 pycodestyle
 pycosat
 pycparser
-pyct
-pycurl==7.45.2
-pydantic
-pydantic_core
 pydeck
-PyDispatcher
 pydocstyle
-pyee
 pyerfa
 pyflakes
 Pygments
 PyJWT
 pylint
-pylint-venv
-pyls-spyder==0.4.0
 PyNaCl
 pyodbc
 pyOpenSSL
 pyparsing
-pyppeteer
-PyQt5==5.15.10
-PyQt5-sip
-PyQtWebEngine==5.15.6
-PySocks
 pytesseract==0.3.13
 pytest
 python-dateutil
 python-dotenv
-python-json-logger
-python-lsp-black
-python-lsp-jsonrpc
-python-lsp-server
-python-slugify
-python-snappy
-pytoolconfig
 pytz
-pyviz_comms
-pywavelets
 pywin32==305.1
-pywin32-ctypes
-pywinpty
-PyYAML
 pyzmq
-QDarkStyle
-qstylizer
-QtAwesome
 qtconsole
 QtPy
-queuelib
-referencing
 regex
 requests
-requests-file
-requests-toolbelt
+rich
+rope
 rfc3339-validator
 rfc3986-validator
-rich
-roboflow==1.1.44
-rope
-rpds-py
-Rtree
-ruamel-yaml-conda
-ruamel.yaml
 s3fs
 scikit-image
 scikit-learn
 scipy
-Scrapy
 seaborn
 semver
 Send2Trash
-service-identity
 setuptools==75.1.0
-sip
 six
 smart-open
-smmap
 sniffio
-snowballstemmer
 sortedcontainers
 soupsieve
 Sphinx
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-htmlhelp
-sphinxcontrib-jsmath
-sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml
-spyder
-spyder-kernels
 SQLAlchemy
 stack-data
 statsmodels
 streamlit
 sympy==1.13.3
-tables
 tabulate
-tblib
 tenacity
 tensorboard==2.17.0
-tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-intel==2.17.0
 termcolor==2.4.0
 terminado
 text-unidecode
 textdistance
-thop==0.1.1.post2209072238
 threadpoolctl
-three-merge
 tifffile
 tinycss2
-tldextract
 toml
 tomli
-tomlkit
 toolz
 torch==2.4.1
 torchaudio==2.4.1+cpu
@@ -377,19 +224,11 @@ torchvision==0.19.1+cpu
 tornado
 tqdm
 traitlets
-truststore
-Twisted
-twisted-iocpsupport
 typing_extensions==4.12.2
 tzdata
-uc-micro-py
 ujson
 ultralytics==8.2.101
-ultralytics-thop==2.0.5
-unicodedata2
-Unidecode
 urllib3
-w3lib
 watchdog
 wcwidth
 webencodings
@@ -397,10 +236,8 @@ websocket-client
 websockets
 Werkzeug
 wget==3.2
-whatthepatch
 wheel==0.43.0
 widgetsnbextension
-win-inet-pton
 wrapt
 xarray
 xgboost==2.1.1
