--- a/requirements.txt
+++ b/requirements.txt
@@ -1,251 +1,7 @@
-absl-py==2.1.0
-antlr4-python3-runtime==4.9.3
-anyio
-appdirs==1.4.4
-async-lru
-atomicwrites==1.4.0
-attrs
-Babel
-bcrypt
-beautifulsoup4
-black
-bleach
-blinker
-bokeh
-boltons
-Bottleneck
-Brotli
-cachetools
-category-encoders==2.6.3
-certifi
-cffi
-chardet
-charset-normalizer
-click
-cloudpickle
-colorama
-cycler
-Cython==3.0.11
-cytoolz
-dask
-datashader
-debugpy
-decorator
-defusedxml
-dill
-distributed
-distro
-docutils
-entrypoints
-et-xmlfile
-executing
-filelock==3.16.1
-filetype==1.2.0
-flake8
-Flask
-flatbuffers==24.3.25
-fonttools
-frozendict
-frozenlist
-fsspec==2024.9.0
-gast==0.6.0
-gensim
-gitdb
-GitPython
-google-pasta==0.2.0
-greenlet
-grpcio==1.65.4
-h11
-h5py
-HeapDict
-holoviews
-httpcore
-httpx
-hvplot
-hydra-core==1.3.2
-idna
-imagecodecs
-imageio
-imagesize
-imbalanced-learn
-importlib-metadata
-incremental
-inflection
-iniconfig
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-isort
-itemadapter
-itsdangerous
-jedi
-jellyfish
-Jinja2==3.1.4
-jmespath
-joblib
-json5
-jsonpatch
-jsonpointer==2.1
-jsonschema
-jupyter-client
-jupyter-core
-jupyterlab-widgets
-keras==3.5.0
-keyring
-kiwisolver
-lazy-object-proxy
-libarchive-c
-libclang==18.1.1
-llvmlite
-lmdb
-locket
-lxml
-lz4
-Markdown
-MarkupSafe==2.1.5
-matplotlib
-matplotlib-inline
-mccabe
-mistune
-mkl-fft
-mkl-random
-mkl-service==2.4.0
-ml-dtypes==0.4.0
-more-itertools
-mpmath==1.3.0
-msgpack
-multidict
-mypy
-mypy-extensions
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-networkx==3.3
-nltk
-notebook
-numba
-numexpr
-numpy
-numpydoc
 opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-openpyxl
-opt-einsum==3.3.0
-pandas
-pandocfilters
-param
-parsel
-parso
-pathspec
-pexpect
-pickleshare
-pillow
-pkginfo
-platformdirs
-plotly
-pluggy
-ply
-pmdarima==2.0.4
-prometheus-client
-prompt-toolkit
-protobuf==3.20.3
-psutil
-ptyprocess
-pyasn1
-pyasn1-modules==0.2.8
-pycodestyle
-pycosat
-pycparser
-pydeck
-pydocstyle
-pyerfa
-pyflakes
-Pygments
-PyJWT
-pylint
-PyNaCl
-pyodbc
-pyOpenSSL
-pyparsing
-pytesseract==0.3.13
-pytest
-python-dateutil
-python-dotenv
-pytz
-pywin32==305.1
-pyzmq
-qtconsole
-QtPy
-regex
-requests
-rich
-rope
-rfc3339-validator
-rfc3986-validator
-s3fs
-scikit-image
-scikit-learn
-scipy
-seaborn
-semver
-Send2Trash
-setuptools==75.1.0
-six
-smart-open
-sniffio
-sortedcontainers
-soupsieve
-Sphinx
-SQLAlchemy
-stack-data
-statsmodels
+numpy
+ultralytics
 streamlit
-sympy==1.13.3
-tabulate
-tenacity
-tensorboard==2.17.0
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
-termcolor==2.4.0
-terminado
-text-unidecode
-textdistance
-threadpoolctl
-tifffile
-tinycss2
-toml
-tomli
-toolz
-torch==2.4.1
-torchaudio==2.4.1+cpu
-torchvision==0.19.1+cpu
-tornado
-tqdm
-traitlets
-typing_extensions==4.12.2
-tzdata
-ujson
-ultralytics==8.2.101
-urllib3
-watchdog
-wcwidth
-webencodings
-websocket-client
-websockets
-Werkzeug
-wget==3.2
-wheel==0.43.0
-widgetsnbextension
-wrapt
-xarray
-xgboost==2.1.1
-xlwings
-xyzservices
-yapf
-yarl
-zict
-zipp
-zope.interface
-zstandard
+pandas
+PIL
+torch
